homecluster/freshrss/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: freshrss
  namespace: default
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: FreshRSS
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: freshrss.png
    gethomepage.dev/href: https://freshrss.tylermarques.com
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`freshrss.tylermarques.com`)
      priority: 10
      services:
        - name: freshrss
          port: 80
